# flex-datafortelling

./: .gitignore  Dockerfile  Makefile  README.md  _quarto.yml  dev.qmd  env.example  index.py  index.qmd  justpython.py  local.py  naisjob.yaml  prod.py  prod.qmd  prod.yml  publish.sh  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: deploy-dev.yaml  deploy-prod.yaml  deploy.yaml  workflow.yaml
.nais/: dev.yaml  naisjob.yaml  prod.yaml
fortellinger/: _naeringsdrivende_inntekt.qmd  _okr_t1_2024.qmd  naeringsdrivende_inntekt.py
grafer_og_visninger/: enkel_bar_chart.py  pie_chart.py
nais/: dev.yaml  naisjob.yaml  prod.yaml
oppsett/: bigquery.py
queries/: flexjar_svar_per_dag.py  naeringsdrivende_inntekt.py
