[tool.poetry]
name = "flex-datafortelling"
version = "0.1.0"
description = ""
authors = ["NAV-IT"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
nbformat = "^5.9.2"
nbclient = "^0.10.0"
ipython = "^9.6.0"
ipykernel = "^7.1.0"
python-dotenv = "^1.2.1"
matplotlib = "^3.10.8"
google-cloud-bigquery = "^3.38.0"
google-cloud-bigquery-storage = "^2.34.0"
google-api-python-client = "^2.187.0"
db-dtypes = "^1.4.3"
pyyaml = "^6.0.3"
seaborn = "^0.13.2"
rich = "^14.2.0"
fonttools = ">=4.60.2"
pandas = ">=2.2.4"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
